--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ div.field{
     justify-content: space-between;
 }
 input.password{
-    width: 60%;
+    width: 80%;
     font-size: 110%;
     padding: 4% 0% 4% 3%;
     background: none;
@@ -51,12 +51,17 @@ input.password{
 }
 div.show-pass, div.gen-pass{
     font-size: 90%;
-    font-weight: 700;
+    font-weight: 900;
     color: grey;
     cursor: pointer;
     margin-right: 3%;
+    display: flex;
+    align-items: center;
 }
-div.show-pass::selection, div.gen-pass::selection{
+i.material-icons{
+    font-size: 200%;
+}
+div.show-pass::selection, div.gen-pass::selection, div.show-pass > *::selection, div.gen-pass > *::selection{
     background: none;
 }
 
