--- a/css/lslstrength.css
+++ b/css/lslstrength.css
@@ -1,3 +1,37 @@
+div.field{
+    width: 99%;
+    margin-top: 20%;
+    border: 3px solid;
+    border-radius: 5px;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+input.password{
+    width: 80%;
+    font-size: 110%;
+    padding: 4% 0% 4% 3%;
+    background: none;
+    border: none;
+    outline: none;
+}
+div.show-pass, div.gen-pass{
+    font-size: 90%;
+    font-weight: 900;
+    color: grey;
+    cursor: pointer;
+    margin-right: 3%;
+    display: flex;
+    align-items: center;
+}
+i.material-icons{
+    font-size: 200%;
+}
+div.show-pass::selection, div.gen-pass::selection, div.show-pass > *::selection, div.gen-pass > *::selection{
+    background: none;
+}
+
 div.progress-bar{
     padding: 1% 0%;
     margin-top: 1%;
@@ -10,6 +44,7 @@ div.progress-bar > div {
     height: 8px;
     border-radius: 5px;
 }
+
 div.percentage{
     border: 1px solid lightgrey;
     margin: 10% auto 0% auto;
